--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -28,7 +29,5 @@ dependencies {
     compile 'com.google.firebase:firebase-database:15.0.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
-
-
 
 apply plugin: 'com.google.gms.google-services'
