--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.google.firebase:firebase-database:15.0.0'
+    implementation 'com.google.firebase:firebase-database:15.0.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
 
