--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         </activity>
 
         <activity
-            android:name=".PollActivity" />
+            android:name=".PollActivity" >
+        </activity>
 
         <activity
             android:name=".LoginActivity"
@@ -26,7 +27,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Dashboard">
+        <activity
+            android:name=".Dashboard">
         </activity>
 
         <activity
