--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Grafica">
+        </activity>
         <activity
             android:name=".MenuActivity"
             android:theme="@style/AppTheme">
