--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,17 @@
         android:roundIcon="@mipmap/tqueremos_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ResultsActivity">
+        <activity
+            android:name=".ResultsActivity"
+            android:parentActivityName=".MenuActivity">
         </activity>
         <activity
             android:name=".MenuActivity"
             android:theme="@style/AppTheme">
         </activity>
         <activity
-            android:name=".PollActivity">
+            android:name=".PollActivity"
+            android:parentActivityName=".MenuActivity">
         </activity>
         <activity
             android:name=".LoginActivity"
