agrega botones y ddiseño mejorado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,8 +43,11 @@
 
         <activity
             android:name=".UsuarioActivity"
-            android:parentActivityName=".MenuActivity"></activity>
-        <activity android:name=".ForgotPasswordActivity"></activity>
+            android:parentActivityName=".MenuActivity">
+        </activity>
+        <activity android:name=".ForgotPasswordActivity"
+            android:theme="@style/AppTheme.Dark">
+        </activity>
     </application>
 
 </manifest>
