--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,11 @@
         android:roundIcon="@mipmap/tqueremos_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ResultsActivity"></activity>
+        <activity android:name=".ResultsActivity" />
         <activity
             android:name=".MenuActivity"
-            android:theme="@style/AppTheme"></activity>
-        <activity android:name=".PollActivity"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".PollActivity" />
         <activity
             android:name=".LoginActivity"
             android:theme="@style/AppTheme.Dark">
@@ -25,10 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Dashboard"></activity>
+        <activity android:name=".Dashboard" />
         <activity
             android:name=".SignupActivity"
-            android:theme="@style/AppTheme.Dark"></activity>
+            android:theme="@style/AppTheme.Dark" />
 
         <service android:name=".MyFirebaseMessagingService">
             <intent-filter>
@@ -43,10 +43,13 @@
 
         <activity
             android:name=".UsuarioActivity"
-            android:parentActivityName=".MenuActivity">
-        </activity>
-        <activity android:name=".ForgotPasswordActivity"
-            android:theme="@style/AppTheme.Dark">
+            android:parentActivityName=".MenuActivity" />
+        <activity
+            android:name=".ForgotPasswordActivity"
+            android:theme="@style/AppTheme.Dark" />
+        <activity
+            android:name=".EditarUsuarioActivity"
+            android:parentActivityName=".UsuarioActivity">
         </activity>
     </application>
 
